# simplet2s-rs

./: .bumpversion.cfg  .gitignore  .travis.yml  Cargo.toml  MANIFEST.in  README.md  build.rs  setup.py
.github/workflows/: Python.yml  Rust.yml
benches/: simple.rs
cabi/: Cargo.toml  build.rs
cabi/src/: lib.rs
simplet2s/: __init__.py
src/: lib.rs  t2s.txt
tests/: test_simplet2s.py
